--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ main h2 {
     margin: 0 auto;
 }
 
-/* Add Student Styles Below */
+.Kyles-style {
+    color: rgb(0, 17, 248);
+    background-color: black;
+    padding: 3px;
+}
 .jane-style {
     color: hotpink;
     background-color: black;
